# ansible-role-vault

./: README.md  ansible.cfg  pyproject.toml
.github/workflows/: ci.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  converge.yml.proxy  molecule.yml  molecule.yml.proxy  prepare.yml.proxy
molecule/tls/: converge.yml  molecule.yml  prepare.yml
molecule/tls/certificates/: instance_cert.csr  instance_private.key  instance_public.crt
molecule/tls/tasks/: generate_ca_signed_cert.yml  generate_custom_ca.yml  generate_selfsigned_cert.yml
tasks/: configure_vault.yml  create_policy.yml  initialize_vault.yml  install_unseal_service.yml  install_vault.yml  main.yml  unseal_vault.yml
templates/: vault-unseal.service.j2  vault-unseal.sh.j2  vault.service.j2  vault_main_configuration.hcl.j2
vars/: main.yaml
